// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note component renders a .Note by default 1`] = `
<div
  className="Note"
>
  <h2
    className="Note__title"
  >
    <Link
      to="/note/undefined"
    />
  </h2>
  <button
    className="Note__delete"
    onClick={[Function]}
    type="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="trash-alt"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    />
     remove
  </button>
  <p />
  <div
    className="Note__dates"
  >
    <div
      className="Note__dates-modified"
    >
      <span
        className="Date"
      >
        <n
          ago={false}
          calendar={false}
          decimal={false}
          element={null}
          filter={[Function]}
          format="D MMMM YYYY"
          fromNow={false}
          interval={60000}
          local={false}
          onChange={[Function]}
          titleFormat=""
          toNow={false}
          trim={false}
          unit={null}
          unix={false}
          utc={false}
          withTitle={false}
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Note component renders the Note given props 1`] = `
<div
  className="Note"
>
  <h2
    className="Note__title"
  >
    <Link
      to="/note/a"
    >
      test-class-name
    </Link>
  </h2>
  <button
    className="Note__delete"
    onClick={[Function]}
    type="button"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon="trash-alt"
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    />
     remove
  </button>
  <p />
  <div
    className="Note__dates"
  >
    <div
      className="Note__dates-modified"
    >
      <span
        className="Date"
      >
        <n
          ago={false}
          calendar={false}
          decimal={false}
          element={null}
          filter={[Function]}
          format="D MMMM YYYY"
          fromNow={false}
          interval={60000}
          local={false}
          onChange={[Function]}
          titleFormat=""
          toNow={false}
          trim={false}
          unit={null}
          unix={false}
          utc={false}
          withTitle={false}
        >
          <Component />
        </n>
      </span>
    </div>
  </div>
</div>
`;
